# TCP

./: CMakeLists.txt  Dockerfile  README.md
client/: CMakeLists.txt  main.c
server/: CMakeLists.txt  files.c  files.h  main.c  request.c  request.h  response.c  response.h  router.c  router.h  server.c  server.h
server/public/: 404not_found.html  index.html  style.css
